[FIX] base_import: dark mode file import
Steps to reproduce:
- Enable dark mode
- import a file :
-- CRM > favorites > import records
-- upload a file

Bug:
Background is white

Fix:
remove CSS property (Background is already white in light mode and
shouldn't be in dark mode)

opw-3029509

--- a/addons/base_import/static/src/legacy/scss/base_import.scss
+++ b/addons/base_import/static/src/legacy/scss/base_import.scss
@@ -45,7 +45,6 @@
 
     .oe_import_with_file {
         flex: 1 1 100%;
-        background-color: white;
         overflow: auto;
         label {
             font-weight: normal;
